DC-147 fix scroll-region not showing all items issue

--- a/app/internal_packages/thread-list/styles/thread-list.less
+++ b/app/internal_packages/thread-list/styles/thread-list.less
@@ -50,6 +50,9 @@ input:focus {
     width: 100%;
     height: 100%;
     -webkit-font-smoothing: subpixel-antialiased;
+    .scroll-region-content{
+      height: calc(~"100% - 40px");
+    }
   }
 
   .swipe-backing {
