--- a/app/static/workspace.less
+++ b/app/static/workspace.less
@@ -659,6 +659,7 @@ body.platform-win32 {
 
 .column-DraftList {
   margin-top: @search-bar-height;
+  padding-bottom: @search-bar-height;
   -webkit-app-region: no-drag;
 }
 
